# wald-engine

./: .clang-format.old  .gitignore  CMakeLists.txt  README.md  wald.puml
Sandbox/: main.c
WaldEngine/components/: we_components.h
WaldEngine/core/: we_defines.c  we_defines.h  we_engine.c  we_engine.h  we_input.c  we_input.h  we_log.h  we_window.c  we_window.h
WaldEngine/core/containers/: we_hash_map.c  we_hash_map.h  we_vector.c  we_vector.h
WaldEngine/maths/: we_maths.h  we_maths_functions.c  we_maths_functions.h  we_matrix4.c  we_matrix4.h  we_vec2.c  we_vec2.h  we_vec3.c  we_vec3.h  we_vec4.c  we_vec4.h
WaldEngine/renderer/: we_renderer.c  we_renderer.h  we_shader.c  we_shader.h
WaldEngine/renderer/shaders/: frag.glsl  vert.glsl
WaldEngine/scene/: we_entity.c  we_entity.h  we_scene.c  we_scene.h
WaldEngine/utils/: we_file_utils.c  we_file_utils.h  we_string.c  we_string.h
glad/: glad.c
